Fixed issue with truncated text on tab-menu

--- a/webapp/src/pages/tabs/tabs.scss
+++ b/webapp/src/pages/tabs/tabs.scss
@@ -30,6 +30,6 @@ page-tabs {
 
 .tab-text {
     color: white;
-    margin: 5px;
+    margin: 5px, 0px;
     font-size: 66%;
 }
